--- a/assignmentstyle.css
+++ b/assignmentstyle.css
@@ -12,6 +12,7 @@ nav{
     background-color: #264653;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
+    z-index:1;
 }
 h1{
     color:white;
@@ -21,6 +22,7 @@ h1{
     background-color:#577590;
     position:sticky;
     top:0.5cm;
+    z-index:1;
 }
 div{
     width:400px;
